--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "concurrently": "^7.6.0",
     "css-loader": "^3.6.0",
     "style-loader": "^1.2.1",
+    "ts-loader": "^9.4.2",
     "url-loader": "^4.1.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
